--- a/Rach2.html
+++ b/Rach2.html
@@ -31,7 +31,7 @@
       <li><a href="Rach2/Horn_3_4.pdf">3rd_4th_Horn</a></li>
       <li><a href="Rach2/Trombone_Tuba.pdf">Trombone_Tuba</a></li>
       <li><a href="Rach2/Timpani.pdf">Timpani</a></li>
-      <li><a href="Rach2/Percussion.pdf">Timpani</a></li>
+      <li><a href="Rach2/Percussion.pdf">Percussions</a></li>
     </ul>
   </div>
   
