--- a/Finlandia.html
+++ b/Finlandia.html
@@ -13,7 +13,7 @@
 
   <div class="body">
     <ul>
-      <li><a href="Finlandia/score.pdf">score</a></li>
+      <li><a href="Finlandia/score.pdf">Score</a></li>
       <li><a href="Finlandia/Violin_1.pdf">1st_Violin</a></li>
       <li><a href="Finlandia/Violin_2.pdf">2nd_Violin</a></li>
       <li><a href="Finlandia/Viola.pdf">Viola</a></li>
