--- a/Rach2.html
+++ b/Rach2.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="headder">
-    <h1>ラフマニノフ交響曲第2番　第3楽章</h1>
+    <h1>ラフマニノフ交響曲第2番</h1>
+    <h2>※全楽章載せてあります。興味ある人は全部練習してみてね♪</h2>
   </div>
 
   <div class="body">
