--- a/Dov8.html
+++ b/Dov8.html
@@ -9,6 +9,7 @@
 <body>
   <div class="headder">
     <h1>ドヴォルザーク交響曲第8番　第1,4楽章</h1>
+    <h2>※全楽章載せてあります。興味ある人は全部練習してみてね♪</h2>
   </div>
 
   <div class="body">
