--- a/Dov8.html
+++ b/Dov8.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="headder">
-    <h1>ドヴォルザーク交響曲第8番　第1,4楽章</h1>
+    <h1>ドヴォルザーク交響曲第8番</h1>
     <h2>※全楽章載せてあります。興味ある人は全部練習してみてね♪</h2>
   </div>
 
