--- a/Stsere.html
+++ b/Stsere.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="headder">
-    <h1>イーゴリ公より「韃靼人の踊り」</h1>
+    <h1>チャイコフスキー　弦楽セレナーデ　2楽章</h1>
   </div>
 
   <div class="body">
