--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <div class="body">
     <ul>
       <li><a href="Finlandia.html">フィンランディア</a></li>
-      <li><a href="Rach2.html">ラフマニノフ交響曲第2番 2楽章</a></li>
+      <li><a href="Rach2.html">ラフマニノフ交響曲第2番 3楽章</a></li>
       <li><a href="Dov8.html">ドヴォルザーク交響曲第8番 1,4楽章</a></li>
       <li><a href="Sleep.html">眠りの森の美女より「waltz」</a></li>
       <li><a href="Polov.html">イーゴリ公より「韃靼人の踊り」</a></li>
-      <li><a href="Stsere.html">弦楽セレナーデ 2楽章</a></li>
+      <li><a href="Stsere.html">チャイコフスキー　弦楽セレナーデ 2楽章</a></li>
     </ul>
   </div>
 </body>
